--- a/ContactReconcilator/src/main/resources/application.properties
+++ b/ContactReconcilator/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.database=postgres
 
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
