--- a/ContactReconcilator/src/main/resources/application.properties
+++ b/ContactReconcilator/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/postgres
 spring.datasource.host=localhost
 spring.datasource.port=5432
 spring.datasource.database=postgres
