Changes for render deployment

--- a/ContactReconcilator/src/main/resources/application.properties
+++ b/ContactReconcilator/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/postgres
-spring.datasource.host=localhost
+spring.datasource.url=jdbc:postgresql://postgresapp_user:kKo6GdwaTGT6fUEnOGFBd3shoXQotMaj@dpg-cr32eg08fa8c73c43l1g-a/postgresapp
 spring.datasource.port=5432
-spring.datasource.database=postgres
+spring.datasource.database=postgresapp
 
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=postgresapp_user
+spring.datasource.password=kKo6GdwaTGT6fUEnOGFBd3shoXQotMaj
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
