Correction in jdbc url (//hostname:port/database)

--- a/ContactReconcilator/src/main/resources/application.properties
+++ b/ContactReconcilator/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://postgresapp_user:kKo6GdwaTGT6fUEnOGFBd3shoXQotMaj@dpg-cr32eg08fa8c73c43l1g-a/postgresapp
+spring.datasource.url=jdbc:postgresql://dpg-cr32eg08fa8c73c43l1g-a:5432/postgresapp
 spring.datasource.port=5432
 spring.datasource.database=postgresapp
 
